syntax = "proto3";

package pb;

option go_package = "Backend/pb";


message ResetPwEmailRequest {
    string email = 1;
}
message ResetPwEmailResponse {
    string link = 1;
    string status = 2;
}


message ResetPwEmailConfirmRequest {
    string email = 1;
    string password = 2;
}